src/objects/sked_Object_Mapping__c.object
<CustomObject>
    <description>Mapping SObject to SObject</description>
    <fields>
        <fullName>sked_Custom_Mapper__c</fullName>
        <label>Custom Mapper</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sked_Filter_Condition__c</fullName>
        <label>Filter Condition</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sked_Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sked_Source_Object__c</fullName>
        <description>Source Object that do mapping. Will map all fields in Source Object to Target Object</description>
        <label>Source Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sked_Target_Identify_Field__c</fullName>
        <label>Target Identify Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sked_Target_Object__c</fullName>
        <description>Source Object that do mapping. Will map all fields in Source Object to Target Object</description>
        <label>Target Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Object Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>sked_Source_Object__c</columns>
        <columns>sked_Target_Object__c</columns>
        <columns>sked_Target_Identify_Field__c</columns>
        <columns>sked_Custom_Mapper__c</columns>
        <columns>sked_Filter_Condition__c</columns>
        <columns>sked_Is_Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OM-{0000}</displayFormat>
        <label>Object Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Object Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>